// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "rag.grpc.ragManage";
option java_outer_classname = "RagManageProto";
option objc_class_prefix = "RAG";

// 定义包名，避免命名冲突
package rag;

// 定义服务
service RagManage {
  rpc checkMaterial (checkMaterialRequest) returns (checkMaterialResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message checkMaterialRequest {
  string ragCode = 1;
  string ragType = 2;
  string ragInfos = 3;
  string materials = 4;
  Operator operator = 5;
}

message checkMaterialResponse {
  string materials = 1;
}

message Operator {
  string userCode = 1;
  string realName = 2;
}